--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "google-one-tap": "^1.0.6",
+    "googleapis": "^144.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/google-one-tap": "^1.2.6",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
